cot-cli/tests/snapshot_testing/help/snapshots/cli__snapshot_testing__help__nested_custom_group_help_merges_correctly.snap
---
source: cot-cli/tests/snapshot_testing/help/mod.rs
info:
  program: cot
  args:
    - fixture-group
    - "--help"
---
success: true
exit_code: 0
----- stdout -----
Fixture task group

Usage: cot fixture-group [COMMAND]

Commands:
  sub-a  Fixture sub-task A
  help   Print this message or the help of the given subcommand(s)

Options:
  -h, --help  Print help

----- stderr -----
