cot-cli/tests/snapshot_testing/help/snapshots/cli__snapshot_testing__help__version.snap
---
source: cot-cli/tests/snapshot_testing/help/mod.rs
info:
  program: cot
  args:
    - "--version"
---
success: true
exit_code: 0
----- stdout -----
cot 0.2.1

----- stderr -----
